// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders feedback buttons (horizontal format) 1`] = `null`;

exports[`renders feedback buttons (vertical format) 1`] = `
<div
  className="feedback-buttons "
  id="feedback-3"
>
  <div
    className="btn-group-vertical"
    role="group"
    style={
      Object {
        "float": "right",
      }
    }
  >
    <button
      aria-label="Confused"
      className="feedback-button btn btn-light btn-small"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      type="button"
    >
      <test-file-stub
        className="feedback-icon"
      />
    </button>
    <button
      aria-label="Understood"
      className="feedback-button btn btn-light btn-small"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      type="button"
    >
      <test-file-stub
        className="feedback-icon"
      />
    </button>
    <button
      aria-label="give-custom-feedback"
      className="feedback-button btn btn-light btn-small"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      type="button"
    >
      <test-file-stub
        className="feedback-icon"
      />
    </button>
    <div
      id="feedback-3_response_visualizer"
      style={
        Object {
          "display": "inherit",
        }
      }
    >
      <div
        className="gate outer-element"
        style={
          Object {
            "display": "none",
          }
        }
      >
        <div
          className="btn-group-vertical btn-group-sm"
          role="group"
          style={
            Object {
              "verticalAlign": "inherit",
              "width": "100%",
            }
          }
        >
          <button
            className="btn btn-light btn-sm"
            disabled={false}
            id="feedback-3_answers_button"
            onClick={[Function]}
            style={
              Object {
                "fontSize": "10px",
                "lineHeight": "2em",
              }
            }
            type="button"
          >
            <span
              style={
                Object {
                  "marginRight": "5px",
                  "pointerEvents": "none",
                }
              }
            >
              actions
            </span>
            <span
              className="badge badge-dark"
              style={
                Object {
                  "fontSize": "10px",
                  "pointerEvents": "none",
                }
              }
            >
              0
            </span>
          </button>
          <div
            className="progress"
            onBlur={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            style={
              Object {
                "boxShadow": "0 0 2px black",
                "height": "0.7rem",
                "marginTop": "3px",
                "width": "100%",
              }
            }
          >
            <div
              aria-valuemax={100}
              aria-valuemin={0}
              aria-valuenow={NaN}
              className="progress-bar bg-info"
              role="progressbar"
              style={
                Object {
                  "width": "NaN%",
                }
              }
            />
            <div
              aria-valuemax={100}
              aria-valuemin={0}
              aria-valuenow={NaN}
              className="progress-bar bg-warning"
              role="progressbar"
              style={
                Object {
                  "width": "NaN%",
                }
              }
            />
            <div
              aria-valuemax={100}
              aria-valuemin={0}
              aria-valuenow={NaN}
              className="progress-bar bg-success"
              role="progressbar"
              style={
                Object {
                  "width": "NaN%",
                }
              }
            />
            <div
              aria-valuemax={100}
              aria-valuemin={0}
              aria-valuenow={NaN}
              className="progress-bar bg-danger"
              role="progressbar"
              style={
                Object {
                  "width": "NaN%",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    id="response"
  />
</div>
`;

exports[`renders feedback buttons with custom messages 1`] = `
<div
  className="feedback-buttons "
  id="feedback-5"
>
  <div
    className="btn-group"
    role="group"
    style={
      Object {
        "float": "right",
      }
    }
  >
    <button
      aria-label="Confused"
      className="feedback-button btn btn-light btn-small"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      type="button"
    >
      <test-file-stub
        className="feedback-icon"
      />
    </button>
    <button
      aria-label="Understood"
      className="feedback-button btn btn-light btn-small"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      type="button"
    >
      <test-file-stub
        className="feedback-icon"
      />
    </button>
    <button
      aria-label="give-custom-feedback"
      className="feedback-button btn btn-light btn-small"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      type="button"
    >
      <test-file-stub
        className="feedback-icon"
      />
    </button>
    <div
      id="feedback-5_response_visualizer"
      style={
        Object {
          "display": "inherit",
        }
      }
    >
      <div
        className="gate outer-element"
        style={
          Object {
            "display": "none",
          }
        }
      >
        <div
          className="btn-group-vertical btn-group-sm"
          role="group"
          style={
            Object {
              "verticalAlign": "inherit",
              "width": "100%",
            }
          }
        >
          <button
            className="btn btn-light btn-sm"
            disabled={false}
            id="feedback-5_answers_button"
            onClick={[Function]}
            style={
              Object {
                "fontSize": "10px",
                "lineHeight": "inherit",
              }
            }
            type="button"
          >
            <span
              style={
                Object {
                  "marginRight": "5px",
                  "pointerEvents": "none",
                }
              }
            >
              responses
            </span>
            <span
              className="badge badge-dark"
              style={
                Object {
                  "fontSize": "10px",
                  "pointerEvents": "none",
                }
              }
            >
              0
            </span>
          </button>
          <div
            className="progress"
            onBlur={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            style={
              Object {
                "boxShadow": "0 0 2px black",
                "height": "0.7rem",
                "marginTop": "3px",
                "width": "100%",
              }
            }
          >
            <div
              aria-valuemax={100}
              aria-valuemin={0}
              aria-valuenow={NaN}
              className="progress-bar bg-info"
              role="progressbar"
              style={
                Object {
                  "width": "NaN%",
                }
              }
            />
            <div
              aria-valuemax={100}
              aria-valuemin={0}
              aria-valuenow={NaN}
              className="progress-bar bg-warning"
              role="progressbar"
              style={
                Object {
                  "width": "NaN%",
                }
              }
            />
            <div
              aria-valuemax={100}
              aria-valuemin={0}
              aria-valuenow={NaN}
              className="progress-bar bg-success"
              role="progressbar"
              style={
                Object {
                  "width": "NaN%",
                }
              }
            />
            <div
              aria-valuemax={100}
              aria-valuemin={0}
              aria-valuenow={NaN}
              className="progress-bar bg-danger"
              role="progressbar"
              style={
                Object {
                  "width": "NaN%",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    id="response"
  />
</div>
`;

exports[`renders feedback buttons without option to supply custom feedback 1`] = `
<div
  className="feedback-buttons "
  id="feedback-4"
>
  <div
    className="btn-group"
    role="group"
    style={
      Object {
        "float": "right",
      }
    }
  >
    <button
      aria-label="Confused"
      className="feedback-button btn btn-light btn-small"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      type="button"
    >
      <test-file-stub
        className="feedback-icon"
      />
    </button>
    <button
      aria-label="Understood"
      className="feedback-button btn btn-light btn-small"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      type="button"
    >
      <test-file-stub
        className="feedback-icon"
      />
    </button>
    <div
      id="feedback-4_response_visualizer"
      style={
        Object {
          "display": "inherit",
        }
      }
    >
      <div
        className="gate outer-element"
        style={
          Object {
            "display": "none",
          }
        }
      >
        <div
          className="btn-group-vertical btn-group-sm"
          role="group"
          style={
            Object {
              "verticalAlign": "inherit",
              "width": "100%",
            }
          }
        >
          <button
            className="btn btn-light btn-sm"
            disabled={false}
            id="feedback-4_answers_button"
            onClick={[Function]}
            style={
              Object {
                "fontSize": "10px",
                "lineHeight": "inherit",
              }
            }
            type="button"
          >
            <span
              style={
                Object {
                  "marginRight": "5px",
                  "pointerEvents": "none",
                }
              }
            >
              responses
            </span>
            <span
              className="badge badge-dark"
              style={
                Object {
                  "fontSize": "10px",
                  "pointerEvents": "none",
                }
              }
            >
              0
            </span>
          </button>
          <div
            className="progress"
            onBlur={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            style={
              Object {
                "boxShadow": "0 0 2px black",
                "height": "0.7rem",
                "marginTop": "3px",
                "width": "100%",
              }
            }
          >
            <div
              aria-valuemax={100}
              aria-valuemin={0}
              aria-valuenow={NaN}
              className="progress-bar bg-info"
              role="progressbar"
              style={
                Object {
                  "width": "NaN%",
                }
              }
            />
            <div
              aria-valuemax={100}
              aria-valuemin={0}
              aria-valuenow={NaN}
              className="progress-bar bg-warning"
              role="progressbar"
              style={
                Object {
                  "width": "NaN%",
                }
              }
            />
            <div
              aria-valuemax={100}
              aria-valuemin={0}
              aria-valuenow={NaN}
              className="progress-bar bg-success"
              role="progressbar"
              style={
                Object {
                  "width": "NaN%",
                }
              }
            />
            <div
              aria-valuemax={100}
              aria-valuemin={0}
              aria-valuenow={NaN}
              className="progress-bar bg-danger"
              role="progressbar"
              style={
                Object {
                  "width": "NaN%",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    id="response"
  />
</div>
`;
